# darkrun

./: .gcloudignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  cloudbuild.yaml  release-please-config.json  tarpaulin.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.darkrun/darkrun-sim/: action-log.jsonl  deadlock.json  run.md  state.json
.darkrun/darkrun-sim/briefs/: frame-post.md
.darkrun/darkrun-sim/feedback/: FB-01.md
.darkrun/darkrun-sim/units/: frame-protocol-problem.md  frame-reconciliation-bound.md  frame-scope-nongoals.md
.github/workflows/: ci.yml  deploy-web.yml  release.yml
content/factories/software/: FACTORY.md
crates/darkrun-api/: openapi.json
crates/darkrun-cli/: Cargo.toml
crates/darkrun-cli/src/: auth.rs  hook.rs  main.rs  pr.rs  statusline.rs  verify.rs
crates/darkrun-cli/tests/: cli.rs
crates/darkrun-content/: Cargo.toml
crates/darkrun-content/src/: lib.rs  loader.rs  model.rs  validate.rs
crates/darkrun-content/tests/: corpus.rs  loader_validate.rs  run_level.rs  software_factory.rs
crates/darkrun-core/: Cargo.toml
crates/darkrun-core/src/: annotation.rs  boot.rs  derive.rs  domain.rs  error.rs  frontmatter.rs  gate_env.rs  lib.rs  state.rs  witness.rs
crates/darkrun-core/tests/: domain_serde.rs  frontmatter.rs  locks.rs  state.rs  state_store.rs
crates/darkrun-e2e/: Cargo.toml
crates/darkrun-e2e/src/: lib.rs
crates/darkrun-e2e/tests/: engine_lifecycle.rs  factory_flows.rs  http_session.rs  state_recovery.rs  vcs_checkpoint.rs
crates/darkrun-e2e/tests/common/: mod.rs
crates/darkrun-git/: Cargo.toml
crates/darkrun-git/src/: authorship.rs  backend.rs  clone.rs  diff.rs  error.rs  gix_backend.rs  lib.rs  libgit2.rs  merge.rs  push.rs  shell.rs
crates/darkrun-git/tests/: remote_status.rs  worktree.rs
crates/darkrun-harness/: Cargo.toml
crates/darkrun-harness/src/: lib.rs
crates/darkrun-http/: Cargo.toml
crates/darkrun-http/src/: handlers.rs  lib.rs  runs.rs  state.rs  ws.rs
crates/darkrun-http/tests/: feedback_ratelimit.rs  proof_visual_routes.rs  routes_core.rs  runs_browse.rs  visual_sessions.rs  ws_state.rs
crates/darkrun-mcp/: Cargo.toml
crates/darkrun-mcp/assets/: AppIcon.icns
crates/darkrun-mcp/src/: annotation.rs  backlog.rs  brief.rs  change.rs  commit.rs  deadlock.rs  debug.rs  desktop.rs  drift.rs  error.rs  events.rs  factory.rs  feedback.rs  gate.rs  hosting.rs  human_write.rs  knowledge.rs  lib.rs  lifecycle.rs  meta.rs  position.rs  proof.rs  reflection.rs  registry.rs  reset.rs  runs.rs  scaffold.rs  schemas.rs  server.rs  sessions.rs  setup.rs  skill_bridge.rs  tools.rs  units.rs  zap.rs
crates/darkrun-mcp/tests/: factory_def.rs  manager.rs  manager_phases.rs  manager_prompts.rs  run_tick_prompts.rs  tools.rs  tracks_checkpoints.rs
crates/darkrun-prompts/: Cargo.toml
crates/darkrun-prompts/src/: cascade.rs  error.rs  lib.rs  providers.rs
crates/darkrun-telemetry/: Cargo.toml
crates/darkrun-telemetry/src/: lib.rs
crates/darkrun-verify/: Cargo.toml
crates/darkrun-verify/src/: lib.rs  web.rs
desktop/: Cargo.toml
desktop/src/: home.rs  main.rs  map.rs  review.rs  wire.rs
desktop/tests/: map_mappings.rs  wire_config.rs  wire_payloads.rs
dev/.claude-plugin/: marketplace.json
infra/: .terraform.lock.hcl  README.md  apis.tf  artifact_registry.tf  bootstrap-gha.sh  bootstrap-tfc.sh  bootstrap.sh  cloud_run.tf  main.tf  outputs.tf  providers.tf  secrets.tf  sentry.tf  terraform.tfvars.example  variables.tf  versions.tf
mockups/: annotation-model.md  annotation-variants.html  darkrun-design.html  desktop-shell.html  engine-gaps-comparison.html  engine-parity-gaps.csv  engine-parity-gaps.md  engine-spec.md  merge-engine.md  predecessor-bug-audit.md  review-app-v2.html  review-app.html
mockups/icons/: wordmark-B.html  wordmark-C.html  wordmark-lightsout.html
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
plugin/: README.md  package.json
plugin/.claude-plugin/: plugin.json
plugin/.cursor-plugin/: plugin.json
plugin/commands/: darkrun-autopilot.md  darkrun-autopilot.toml  darkrun-backlog.md  darkrun-backlog.toml  darkrun-changelog.md  darkrun-changelog.toml  darkrun-checkpoint.md  darkrun-debug.md  darkrun-debug.toml  darkrun-factories.md  darkrun-gate-review.md  darkrun-gate-review.toml  darkrun-migrate.md  darkrun-migrate.toml  darkrun-pickup.md  darkrun-quick.md  darkrun-quick.toml  darkrun-report.md  darkrun-report.toml  darkrun-reset.md  darkrun-reset.toml  darkrun-scaffold.md  darkrun-scaffold.toml  darkrun-setup.md  darkrun-setup.toml  darkrun-show.md  darkrun-start.md  darkrun-statusline.md  darkrun-version.md  darkrun-version.toml  darkrun-zap.md  darkrun-zap.toml
plugin/hooks/: hooks.json
plugin/providers/: design.md  git.md  knowledge.md  spec.md  ticketing.md
plugin/schemas/: settings.schema.json
scripts/: bootstrap-npm-packages.sh  coverage.sh
web/server/: Cargo.toml
web/server/src/: broker.rs  lib.rs  oauth_routes.rs  tests.rs  transport.rs
web/site/: Cargo.toml  Dioxus.toml  index.html
web/site/content/: statusline-demo.html
web/site/content/blog/: checkpoints-not-babysitting.md  darkrun-is-a-harness.md  pure-rust-c-free.md  team-solo-dark.md  the-dark-factory.md
web/site/content/concepts/: glossary.md  lifecycles.md  methodology.md
web/site/content/docs/: getting-started.md  other-harnesses.md  review.md  stations.md  tools-and-commands.md
web/site/content/guides/: about.md  big-picture.md  how-it-works.md  start-here.md  workflows.md
web/site/src/: content.rs  factory_view.rs  layout.rs  lib.rs  route.rs  search.rs  theme_toggle.rs  ui.rs
web/site/src/pages/: blog.rs  browse.rs  changelog.rs  concepts.rs  docs.rs  factories.rs  guides.rs  landing.rs  misc.rs  mod.rs  preview.rs  review.rs
web/site/src/seo/: mod.rs
web/site/tests/: content_corpus.rs  page_factories.rs  page_preview.rs  page_station_detail.rs  routes.rs  statusline_demo.rs
(+172 files in other folders)
