[workspace]
resolver = "2"
members = ["crates/*", "desktop", "web/site", "web/server"]

[workspace.package]
version = "0.2.0"
edition = "2021"
# FSL-1.1-ALv2 is not an SPDX identifier; the full text lives in ./LICENSE.
# darkrun crates are not published to crates.io (npm-only distribution), so this
# informational string doesn't need to be a valid SPDX expression.
license = "FSL-1.1-ALv2"
authors = ["darkrun contributors"]
repository = "https://github.com/jwaldrip/darkrun"
homepage = "https://darkrun.ai"

[workspace.dependencies]
# Shared runtime + serialization stack inherited by member crates.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.31", features = ["signal", "process"] }
sha2 = "0.11"
dirs = "6"
# Hard wall-clock ceiling on network subprocesses (git fetch/push, gh/glab) so an
# unresponsive remote can't wedge a tick — the analog of the predecessor's run_next
# wall deadline.
wait-timeout = "0.2"
# PNG/JPEG decode + region crop for the annotation agent re-reference payload
# (cropping the version-pinned image to the marked normalized rect). Default
# features are trimmed to the raster codecs we actually emit/consume.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Internal crates — referenced by path so downstream members can depend on them.
darkrun-core = { path = "crates/darkrun-core" }
darkrun-api = { path = "crates/darkrun-api" }
darkrun-verify = { path = "crates/darkrun-verify" }
darkrun-content = { path = "crates/darkrun-content" }
darkrun-prompts = { path = "crates/darkrun-prompts" }
darkrun-harness = { path = "crates/darkrun-harness" }
darkrun-mcp = { path = "crates/darkrun-mcp" }
darkrun-git = { path = "crates/darkrun-git" }
darkrun-ui = { path = "crates/darkrun-ui" }
darkrun-vcs = { path = "crates/darkrun-vcs" }
darkrun-telemetry = { path = "crates/darkrun-telemetry" }
# Pure-Rust sync HTTP (rustls, no C) — the engine tick calls hosting APIs from a
# synchronous context inside the tokio runtime, where reqwest::blocking panics.
ureq = { version = "2", default-features = false, features = ["rustls", "json"] }
