[package]
name = "darkrun-content"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedded darkrun factory content (rust-embed) + loader and validator"

[dependencies]
darkrun-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rust-embed = { version = "8", features = ["interpolate-folder-path", "debug-embed"] }

[dev-dependencies]
tempfile = "3"
