[package]
name = "darkrun-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun domain types and filesystem state engine (locks, DAG, frontmatter)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
schemars.workspace = true
chrono.workspace = true
sha2.workspace = true

# Process-liveness probing for stale-lock recovery. Unix-only: the lock engine
# is a filesystem/process facility and is not used on wasm, where this crate is
# pulled in solely for its domain types by the website.
[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
