[package]
name = "darkrun-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun HTTP + WebSocket review server (axum), bridging the engine and the desktop app"

[dependencies]
darkrun-core.workspace = true
darkrun-api.workspace = true
darkrun-git.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
futures-util = "0.3"
