[package]
name = "darkrun-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun MCP server + manager — drives a Run through the factory's stations over stdio"

[dependencies]
darkrun-core.workspace = true
darkrun-api.workspace = true
darkrun-content.workspace = true
darkrun-git.workspace = true
darkrun-vcs.workspace = true
ureq.workspace = true
darkrun-http = { path = "../darkrun-http" }
darkrun-prompts.workspace = true
darkrun-harness.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
schemars.workspace = true
chrono.workspace = true
tokio.workspace = true
dirs.workspace = true
sha2.workspace = true
nix.workspace = true
image.workspace = true
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "schemars"] }
rust-embed = { version = "8", features = ["interpolate-folder-path", "debug-embed"] }
jsonschema = { version = "0.46.5", default-features = false, features = ["resolve-file"] }
serde_yaml.workspace = true

[dev-dependencies]
tempfile = "3"
darkrun-api.workspace = true
