[package]
name = "darkrun-prompts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Engine-driven prompt corpus + resolver with a project-override cascade"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
minijinja = { version = "2", features = ["loader"] }
rust-embed = { version = "8", features = ["interpolate-folder-path", "debug-embed"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
