[package]
name = "darkrun-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun objective-verification engine — headless-browser web vitals + a11y audits and a bench/load harness, shaped into darkrun-api Proof payloads"

[dependencies]
darkrun-api.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures = "0.3"
# CDP-driven headless browser — gives navigation timing + paint metrics +
# screenshots straight from Chrome with no Node runtime in the loop.
chromiumoxide = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
axum = "0.8"
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "load_harness"
harness = false
