[package]
name = "darkrun-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "darkrun website host (axum): server-backed OAuth broker for GitHub/GitLab plus the static wasm site with SPA fallback"

[[bin]]
name = "darkrun-web"
path = "src/bin/darkrun-web.rs"

[dependencies]
darkrun-telemetry.workspace = true
darkrun-vcs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
